Update .gitignore to ignored emacs files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Common Lisp ignores
 *.FASL
 *.fasl
 *.lisp-temp
@@ -15,4 +16,7 @@
 *.sx32fsl
 *.wx64fsl
 *.wx32fsl
-/.#README.org
+
+Emacs Ignores
+\#*\#
+.\#*
